--- a/package.yaml
+++ b/package.yaml
@@ -27,7 +27,6 @@ library:
   - base
   - aeson
   - blaze-html
-  - clay
   - bson
   - bson-generic
   - bytestring
@@ -36,6 +35,7 @@ library:
   - ConfigFile
   - containers
   - data-default
+  - fromhtml
   - github
   - http-client
   - http-types
@@ -46,7 +46,6 @@ library:
   - monad-logger
   - mongoDB
   - network
-  - pandoc >= 2.2.1
   - persistent
   - persistent-template
   - persistent-mongoDB
