--- a/stack.yaml
+++ b/stack.yaml
@@ -47,6 +47,7 @@ extra-deps:
   - ConfigFile-1.1.4
   - pwstore-fast-2.4.4
   - pretty-terminal-0.1.0.0
+  - ginger-0.8.1.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
