--- a/package.yaml
+++ b/package.yaml
@@ -16,7 +16,13 @@ data-files:
   - config/app-config.cfg
   - config/build-info.cfg
   - templates/dmp/root.css
-  - templates/dmp/root.html.jinja
+  - templates/dmp/root.html.j2
+  - templates/mail/registrationConfirmation.html.j2
+  - templates/mail/registrationConfirmation.txt.j2
+  - templates/mail/registrationCreatedAnalytics.html.j2
+  - templates/mail/registrationCreatedAnalytics.txt.j2
+  - templates/mail/resetPassword.html.j2
+  - templates/mail/resetPassword.txt.j2
 library:
   source-dirs: lib
   when:
