--- a/package.yaml
+++ b/package.yaml
@@ -17,12 +17,14 @@ data-files:
   - config/build-info.cfg
   - templates/dmp/root.css
   - templates/dmp/root.html.j2
-  - templates/mail/registrationConfirmation.html.j2
-  - templates/mail/registrationConfirmation.txt.j2
-  - templates/mail/registrationCreatedAnalytics.html.j2
-  - templates/mail/registrationCreatedAnalytics.txt.j2
-  - templates/mail/resetPassword.html.j2
-  - templates/mail/resetPassword.txt.j2
+  - templates/mail/_common/footer.html.j2
+  - templates/mail/_common/footer.txt.j2
+  - templates/mail/registrationConfirmation/message.html.j2
+  - templates/mail/registrationConfirmation/message.txt.j2
+  - templates/mail/registrationCreatedAnalytics/message.html.j2
+  - templates/mail/registrationCreatedAnalytics/message.txt.j2
+  - templates/mail/resetPassword/message.html.j2
+  - templates/mail/resetPassword/message.txt.j2
 library:
   source-dirs: lib
   when:
@@ -42,6 +44,7 @@ library:
   - ConfigFile
   - containers
   - data-default
+  - directory
   - exceptions
   - fromhtml
   - ginger
@@ -54,6 +57,7 @@ library:
   - jwt
   - lens
   - mime-mail
+  - mime-types
   - MissingH
   - mtl
   - monad-control
