--- a/package.yaml
+++ b/package.yaml
@@ -17,8 +17,9 @@ data-files:
   - config/build-info.cfg
   - templates/dmp/root.css
   - templates/dmp/root.html.j2
-  - templates/mail/_common/footer.html.j2
+  - templates/mail/_common/layout.html.j2
   - templates/mail/_common/footer.txt.j2
+  - templates/mail/_common/attachments/logo.png
   - templates/mail/registrationConfirmation/message.html.j2
   - templates/mail/registrationConfirmation/message.txt.j2
   - templates/mail/registrationCreatedAnalytics/message.html.j2
@@ -46,6 +47,7 @@ library:
   - data-default
   - directory
   - exceptions
+  - filepath
   - fromhtml
   - ginger
   - github
