--- a/package.yaml
+++ b/package.yaml
@@ -17,9 +17,10 @@ data-files:
   - config/build-info.cfg
   - templates/dmp/root.css
   - templates/dmp/root.html.j2
-  - templates/mail/_common/layout.html.j2
-  - templates/mail/_common/footer.txt.j2
   - templates/mail/_common/attachments/logo.png
+  - templates/mail/_common/footer.txt.j2
+  - templates/mail/_common/layout.html.j2
+  - templates/mail/_common/style.css
   - templates/mail/registrationConfirmation/message.html.j2
   - templates/mail/registrationConfirmation/message.txt.j2
   - templates/mail/registrationCreatedAnalytics/message.html.j2
