--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ cache:
   directories:
   - $HOME/.stack
   - $HOME/.stack-work
+  - .stack-work
 
 install:
   # 1. Download and unpack the stack executable
