Upgrade to Ubuntu 16.04 (Xenial Xerus)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 sudo: false
-
+dist: xenial
 language: generic
+
+addons:
+  apt:
+    packages:
+      - rabbitmq-server
 
 services:
   - mongodb
