--- a/stack.yaml
+++ b/stack.yaml
@@ -54,10 +54,9 @@ extra-deps:
   - github-0.21
   - http-api-data-0.3.10
   - jwt-0.9.0
-  - github: MarekSuchanek/mime-mail
-    commit: "35038f5"
-    subdirs:
-    - mime-mail
+  - mime-mail-0.5.0
+  - github: jtdaugherty/HaskellNet
+    commit: "2c3da32"
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
