Standardize naming of example files

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,8 @@ install:
   - export PATH=$HOME/.local/bin:$PATH
   - travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v1.9.3/stack-1.9.3-linux-x86_64.tar.gz | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
   # 2. Init Application Config
-  - cp config/app-config.cfg.example config/app-config.cfg
-  - cp config/app-config-test.cfg.example config/app-config-test.cfg
+  - cp config/app-config.example.cfg config/app-config.cfg
+  - cp config/app-config-test.example.cfg config/app-config-test.cfg
 
 before_script:
   # 1. Log to public Docker Hub
