[DSW-314] Configurable phases

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -6,6 +6,7 @@ general:
   integrationConfig: integration.yml
   registrationEnabled: true
   publicQuestionnaireEnabled: true
+  levelsEnabled: true
 
 client:
   appTitle:
