--- a/config/application-test.yml.example
+++ b/config/application-test.yml.example
@@ -6,6 +6,7 @@ general:
   integrationConfig: integration-test.yml
   registrationEnabled: true
   publicQuestionnaireEnabled: true
+  levelsEnabled: true
 
 client:
   appTitle:
