--- a/package.yaml
+++ b/package.yaml
@@ -39,6 +39,7 @@ library:
   - base
   - aeson
   - amqp
+  - blaze-html
   - bson
   - bson-generic
   - bytestring
@@ -61,6 +62,7 @@ library:
   - jwt
   - lens
   - lens-aeson
+  - markdown
   - mime-mail
   - mime-types
   - MissingH
