Add conversion to SHACL

--- a/dsw-server/package.yaml
+++ b/dsw-server/package.yaml
@@ -33,6 +33,7 @@ library:
   - data-default
   - directory
   - dsw-metamodel-migrator
+  - dsw-shacl2events
   - exceptions
   - filepath
   - fromhtml
